--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ weibo_username: DrunkXiao
 zhihu_username: DrunkXiao
 github_username: DrunkXiao
 twitter_username: DrunkXiao
-#facebook_username:  DrunkXiao
+facebook_username:  DrunkXiao
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
@@ -62,7 +62,7 @@ kramdown:
 disqus_username: drunkxiao
 
 # Netease settings
-netease_comment: false
+netease_comment: true
 
 # Analytics settings
 # Baidu Analytics
@@ -78,7 +78,7 @@ sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ 
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: false # whether or not using Feature-Tags
+featured-tags: true # whether or not using Feature-Tags
 featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
