--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: DrunkXiao Blog
+title: 沿途的风景
 SEOTitle: 博客 | DrunkXiao Blog
 header-img: img/home-bg.jpg
 email: xizhongxiao83@gmail.com
@@ -78,7 +78,7 @@ sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ 
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true # whether or not using Feature-Tags
+featured-tags: false # whether or not using Feature-Tags
 featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
@@ -91,12 +91,12 @@ page-mathjax: false
 # Friends
 friends:
   [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
+    { title: "乱序（Midare）", href: "#" },
+    { title: "Ebn Zhang", href: "#" },
+    { title: "Kun Qian", href: "#" },
+    { title: "Sherry Woo", href: "#" },
+    { title: "SmdCn", href: "#" },
+    { title: "JiyinYiyong", href: "#" },
+    { title: "DHong Say", href: "#" },
+    { title: "尹峰以为", href: "#" },
   ]
