--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 沿途的风景
 SEOTitle: 博客 | DrunkXiao Blog
-header-img: img/home-bg.jpg
+header-img: img/home-bg2.jpg
 email: xizhongxiao83@gmail.com
 description: "这里是 @DrunkXiao的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "DrunkXiao Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
@@ -79,14 +79,14 @@ sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's us
 
 # Featured Tags
 featured-tags: false # whether or not using Feature-Tags
-featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 0 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
 service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: true
+page-mathjax: false
 
 # Friends
 friends:
