--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: 沿途的风景
 SEOTitle: 博客 | DrunkXiao Blog
 header-img: img/home-bg2.jpg
 email: xizhongxiao83@gmail.com
-description: "这里是 @DrunkXiao的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "DrunkXiao Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+description: "这里是 @DrunkXiao的个人博客，与你一起发现更大的世界"
+keyword: "DrunkXiao Blog, 博客, 个人网站, 互联网, Web, 学习分享"
 url: "https://trunkx.us.kg" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -15,7 +15,7 @@ future: true
 RSS: false
 weibo_username: DrunkXiao
 zhihu_username: DrunkXiao
-github_username: DrunkXiao
+#github_username: DrunkXiao
 twitter_username: DrunkXiao
 facebook_username:  DrunkXiao
 #linkedin_username:  firstname-lastname-idxxxx
@@ -62,7 +62,7 @@ kramdown:
 disqus_username: drunkxiao
 
 # Netease settings
-netease_comment: true
+netease_comment: false
 
 # Analytics settings
 # Baidu Analytics
@@ -74,8 +74,8 @@ ga_domain: trunkx.us.kg
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "与你一起发现更大的世界"
+sidebar-avatar: https://github.com/drunkxiao.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: false # whether or not using Feature-Tags
