--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ sidebar-about-description: "与你一起发现更大的世界"
 sidebar-avatar: https://github.com/drunkxiao.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: false # whether or not using Feature-Tags
-featured-condition-size: 0 # A tag will be featured if the size of it is more than this condition value
+featured-tags: true # whether or not using Feature-Tags
+featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
